--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <link rel="stylesheet" href="/styles/main.scss">
+
+	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/main.scss">
   </head>
   <body>
-    <div class="grid">
+    <!-- <div class="grid">
       <div class="pr-1-light-3"></div>
       <div class="pr-2-light-3"></div>
       <div class="pr-3-light-3"></div>
@@ -56,5 +58,57 @@
 		<br> 
 		Our essay and research paper writing services are provided by a large team of editing, writing and research specialists who can help you with all types of coursework, whether you have essays, term papers, research papers, theses or dissertations to complete. Our essay writers are able to help you with all subject matters for all education levels, no matter if you are a high school student or studying for a PhD or Master's degree.
 	 </p>
+	 <ul>
+		<li>But I must explain to you how </li>
+		<li>Mistaken idea of denouncing pleasure</li>
+		<li>Praising pain was born</li>
+		<li>Account of the system, and expound</li>
+		<li>Great explorer of the truth</li>
+		<li>No one rejects, dislikes</li>
+	 </ul>
+	 <p class="subtitle">
+		By utilizing elements and principles of Material Design, we were able to create a framework that incorporates 
+	 </p>
+	 <blockquote>
+		On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and 
+	 </blockquote> -->
+	
+	 <input placeholder="Placeholder text" type="text">
+	 <br>
+	 <div class="pages">
+		<button>-</button>
+		<input type="number">
+		<button>+</button>
+	 </div>
+	 <select class="form-select" aria-label="Default select example">
+		<option selected>Open this select menu</option>
+		<option value="1">One</option>
+		<option value="2">Two</option>
+		<option value="3">Three</option>
+	 </select>
+	 <input placeholder="Success" class="success" type="text">
+	 <input placeholder="An error has ocured" class="no-success" type="text"> 
+	 <br>
+	 <input type="checkbox">
+	 <br>
+	 <input type="radio">
+	 <br>
+	 <button class="btn1">Btn1</button>
+	 <button class="btn2">Btn2</button>
+	 <button class="btn3">Btn3</button>
+	 <button class="btn4">Btn4</button>
+	 <button class="btn5">Btn5</button>
+	 <br>
+	 <br>
+	 <button class="btn1-2">Btn1</button>
+	 <button class="btn2-2">Button2</button>
+	 <button class="btn3-2">Button3</button>
+	 <button class="btn4-2">Button4</button>
+	 <button class="btn5-2">Button5</button>
+
+
+	<!-- scripts -->
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
 </html>
