--- a/index.html
+++ b/index.html
@@ -5,106 +5,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
 
+	 <link rel="stylesheet" href="styles/all.css">
 	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.scss">
   </head>
   <body>
-    <!-- <div class="grid">
-      <div class="pr-1-light-3"></div>
-      <div class="pr-2-light-3"></div>
-      <div class="pr-3-light-3"></div>
-      <div class="pr-4-light-3"></div>
-
-      <div class="pr-1-light-2"></div>
-      <div class="pr-2-light-2"></div>
-      <div class="pr-3-light-2"></div>
-      <div class="pr-4-light-2"></div>
-
-      <div class="pr-1-light-1"></div>
-      <div class="pr-2-light-1"></div>
-      <div class="pr-3-light-1"></div>
-      <div class="pr-4-light-1"></div>
-
-      <div class="prime-1"></div>
-      <div class="prime-2"></div>
-      <div class="prime-3"></div>
-      <div class="prime-4"></div>
-
-      <div class="pr-1-dark-1"></div>
-      <div class="pr-2-dark-1"></div>
-      <div class="pr-3-dark-1"></div>
-      <div class="pr-4-dark-1"></div>
-
-      <div class="pr-1-dark-2"></div>
-      <div class="pr-2-dark-2"></div>
-      <div class="pr-3-dark-2"></div>
-      <div class="pr-4-dark-2"></div>
-
-      <div class="pr-1-dark-3"></div>
-      <div class="pr-2-dark-3"></div>
-      <div class="pr-3-dark-3"></div>
-      <div class="pr-4-dark-3"></div>
-    </div>
-
-    <h1>Do you need essay help?</h1>
-    <h2>Do you need essay help?</h2>
-    <h3>Do you need essay help?</h3>
-    <h4>Do you need essay help?</h4>
-    <h5>Do you need essay help?</h5>
-    <h6>Do you need essay help?</h6>
-
-	 <p>
-		If you need to buy papers or custom essays, you have arrived at the ideal place! We offer guarantees that any essay work provided by our professional writing services will be entirely free of plagiarism and 100% freshly written. At BestEssayService.net, we make sure our customers are fully satisfied every time they use our custom term paper writing service. 
-		<br> 
-		Our essay and research paper writing services are provided by a large team of editing, writing and research specialists who can help you with all types of coursework, whether you have essays, term papers, research papers, theses or dissertations to complete. Our essay writers are able to help you with all subject matters for all education levels, no matter if you are a high school student or studying for a PhD or Master's degree.
-	 </p>
-	 <ul>
-		<li>But I must explain to you how </li>
-		<li>Mistaken idea of denouncing pleasure</li>
-		<li>Praising pain was born</li>
-		<li>Account of the system, and expound</li>
-		<li>Great explorer of the truth</li>
-		<li>No one rejects, dislikes</li>
-	 </ul>
-	 <p class="subtitle">
-		By utilizing elements and principles of Material Design, we were able to create a framework that incorporates 
-	 </p>
-	 <blockquote>
-		On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and 
-	 </blockquote> -->
+    <div class="container">
+		<div class="grid">
+			<div class="pr-1-light-3"></div>
+			<div class="pr-2-light-3"></div>
+			<div class="pr-3-light-3"></div>
+			<div class="pr-4-light-3"></div>
 	
-	 <input placeholder="Placeholder text" type="text">
-	 <br>
-	 <div class="pages">
-		<button>-</button>
-		<input type="number">
-		<button>+</button>
+			<div class="pr-1-light-2"></div>
+			<div class="pr-2-light-2"></div>
+			<div class="pr-3-light-2"></div>
+			<div class="pr-4-light-2"></div>
+	
+			<div class="pr-1-light-1"></div>
+			<div class="pr-2-light-1"></div>
+			<div class="pr-3-light-1"></div>
+			<div class="pr-4-light-1"></div>
+	
+			<div class="prime-1"></div>
+			<div class="prime-2"></div>
+			<div class="prime-3"></div>
+			<div class="prime-4"></div>
+	
+			<div class="pr-1-dark-1"></div>
+			<div class="pr-2-dark-1"></div>
+			<div class="pr-3-dark-1"></div>
+			<div class="pr-4-dark-1"></div>
+	
+			<div class="pr-1-dark-2"></div>
+			<div class="pr-2-dark-2"></div>
+			<div class="pr-3-dark-2"></div>
+			<div class="pr-4-dark-2"></div>
+	
+			<div class="pr-1-dark-3"></div>
+			<div class="pr-2-dark-3"></div>
+			<div class="pr-3-dark-3"></div>
+			<div class="pr-4-dark-3"></div>
+		 </div>
+	
+		 <h1>Do you need essay help?</h1>
+		 <h2>Do you need essay help?</h2>
+		 <h3>Do you need essay help?</h3>
+		 <h4>Do you need essay help?</h4>
+		 <h5>Do you need essay help?</h5>
+		 <h6>Do you need essay help?</h6>
+	
+		 <p>
+			If you need to buy papers or custom essays, you have arrived at the ideal place! We offer guarantees that any essay work provided by our professional writing services will be entirely free of plagiarism and 100% freshly written. At BestEssayService.net, we make sure our customers are fully satisfied every time they use our custom term paper writing service. 
+			<br> 
+			Our essay and research paper writing services are provided by a large team of editing, writing and research specialists who can help you with all types of coursework, whether you have essays, term papers, research papers, theses or dissertations to complete. Our essay writers are able to help you with all subject matters for all education levels, no matter if you are a high school student or studying for a PhD or Master's degree.
+		 </p>
+		 <ul>
+			<li>But I must explain to you how </li>
+			<li>Mistaken idea of denouncing pleasure</li>
+			<li>Praising pain was born</li>
+			<li>Account of the system, and expound</li>
+			<li>Great explorer of the truth</li>
+			<li>No one rejects, dislikes</li>
+		 </ul>
+		 <p class="subtitle">
+			By utilizing elements and principles of Material Design, we were able to create a framework that incorporates 
+		 </p>
+		 <blockquote>
+			On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and 
+		 </blockquote>
+		
+		 <input placeholder="Placeholder text" type="text">
+		 <br>
+		 <div class="pages">
+			<button>-</button>
+			<input type="number">
+			<button>+</button>
+		 </div>
+		 <select class="form-select" aria-label="Default select example">
+			<option selected>Open this select menu</option>
+			<option value="1">One</option>
+			<option value="2">Two</option>
+			<option value="3">Three</option>
+		 </select>
+		 <input placeholder="Success" class="success" type="text">
+		 <input placeholder="An error has ocured" class="no-success" type="text"> 
+		 <br>
+		 <input type="checkbox">
+		 <br>
+		 <input type="radio">
+		 <br>
+		 <button class="btn1">Btn1</button>
+		 <button class="btn2">Btn2</button>
+		 <button class="btn3">Btn3</button>
+		 <button class="btn4">Btn4</button>
+		 <button class="btn5">Btn5</button>
+		 <br>
+		 <br>
+		 <button class="btn1-2">Btn1</button>
+		 <button class="btn2-2">Button2</button>
+		 <button class="btn3-2">Button3</button>
+		 <button class="btn4-2">Button4</button>
+		 <button class="btn5-2">Button5</button>
+	
+		 <p class="info-popup">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+		 </p>
+
+		 <a class="social" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+		 <a class="social" href="#"><i class="fa-brands fa-twitter"></i></a>
+		 <a class="social" href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+		 <a class="social" href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+		 <a class="social-1" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+		 <a class="social-2" href="#"><i class="fa-brands fa-twitter"></i></a>
+		 <a class="social-3" href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+		 <a class="social-4" href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+		 <br>
+		 <a class="bg-social" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+		 <a class="bg-social" href="#"><i class="fa-brands fa-twitter"></i></a>
+		 <a class="bg-social" href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+		 <a class="bg-social" href="#"><i class="fa-brands fa-google-plus-g"></i></a>
 	 </div>
-	 <select class="form-select" aria-label="Default select example">
-		<option selected>Open this select menu</option>
-		<option value="1">One</option>
-		<option value="2">Two</option>
-		<option value="3">Three</option>
-	 </select>
-	 <input placeholder="Success" class="success" type="text">
-	 <input placeholder="An error has ocured" class="no-success" type="text"> 
-	 <br>
-	 <input type="checkbox">
-	 <br>
-	 <input type="radio">
-	 <br>
-	 <button class="btn1">Btn1</button>
-	 <button class="btn2">Btn2</button>
-	 <button class="btn3">Btn3</button>
-	 <button class="btn4">Btn4</button>
-	 <button class="btn5">Btn5</button>
-	 <br>
-	 <br>
-	 <button class="btn1-2">Btn1</button>
-	 <button class="btn2-2">Button2</button>
-	 <button class="btn3-2">Button3</button>
-	 <button class="btn4-2">Button4</button>
-	 <button class="btn5-2">Button5</button>
 
 
 	<!-- scripts -->
@@ -112,3 +133,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
 </html>
+<!-- <i class="fa-brands fa-facebook-f"></i>
+<i class="fa-brands fa-twitter"></i>
+<i class="fa-brands fa-pinterest-p"></i>
+<i class="fa-brands fa-google-plus-g"></i> -->
