--- a/index.html
+++ b/index.html
@@ -88,10 +88,13 @@
 			<option value="2">Two</option>
 			<option value="3">Three</option>
 		 </select>
-		 <input placeholder="Success" class="success" type="text">
-		 <input placeholder="An error has ocured" class="no-success" type="text"> 
+		 <input disabled placeholder="Success" class="success" type="text">
+		 <input disabled placeholder="An error has ocured" class="no-success" type="text"> 
 		 <br>
-		 <input type="checkbox">
+		 <p class="check">
+			<input type="checkbox" id="checkbox">
+		 	<label for="checkbox"></label>
+		 </p>
 		 <br>
 		 <input type="radio">
 		 <br>
@@ -111,20 +114,6 @@
 		 <p class="info-popup">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
 		 </p>
-
-		 <a class="social" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-		 <a class="social" href="#"><i class="fa-brands fa-twitter"></i></a>
-		 <a class="social" href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-		 <a class="social" href="#"><i class="fa-brands fa-google-plus-g"></i></a>
-		 <a class="social-1" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-		 <a class="social-2" href="#"><i class="fa-brands fa-twitter"></i></a>
-		 <a class="social-3" href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-		 <a class="social-4" href="#"><i class="fa-brands fa-google-plus-g"></i></a>
-		 <br>
-		 <a class="bg-social" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-		 <a class="bg-social" href="#"><i class="fa-brands fa-twitter"></i></a>
-		 <a class="bg-social" href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-		 <a class="bg-social" href="#"><i class="fa-brands fa-google-plus-g"></i></a>
 	 </div>
 
 
