--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		 <br>
 		 <div class="pages">
 			<button>-</button>
-			<input type="number">
+			<input class="pages-number" type="text">
 			<button>+</button>
 		 </div>
 		 <select class="form-select" aria-label="Default select example">
@@ -96,7 +96,10 @@
 		 	<label for="checkbox"></label>
 		 </p>
 		 <br>
-		 <input type="radio">
+		 <p class="radio">
+			<input type="radio" id="radio">
+		 	<label for="radio"></label>
+		 </p>
 		 <br>
 		 <button class="btn1">Btn1</button>
 		 <button class="btn2">Btn2</button>
@@ -110,14 +113,81 @@
 		 <button class="btn3-2">Button3</button>
 		 <button class="btn4-2">Button4</button>
 		 <button class="btn5-2">Button5</button>
-	
-		 <p class="info-popup">
+
+		 <!-- Tabs -->
+		<div class="tab">
+			<button class="tablinks active" onclick="openCity(event, 'London')">Tabname1</button>
+			<button class="tablinks" onclick="openCity(event, 'Paris')">Tabname2</button>
+			<button class="tablinks" onclick="openCity(event, 'Tokyo')">Tabname3</button>
+			<button class="tablinks" onclick="openCity(event, 'Kyiv')">Tabname4</button>
+		</div>
+		<div id="London" class="tabcontent">
+			<p>Placeholder name</p>
+		</div>
+		<div id="Paris" class="tabcontent">
+			<p>Placeholder name</p>
+		</div>
+		<div id="Tokyo" class="tabcontent">
+			<p>Placeholder name</p>
+		</div>
+		<div id="Kyiv" class="tabcontent">
+			<p>Placeholder name</p>
+		</div>
+
+
+
+		<div class="pagination">
+			<a href="#">&#60;</a>
+			<a href="#">1</a>
+			<a href="#">2</a>
+			<a class="active" href="#">3</a>
+			<a href="#">4</a>
+			<a href="#">5</a>
+			<a href="#">6</a>
+			<a href="#">7</a>
+			<a href="#">8</a>
+			<a href="#">9</a>
+			<a href="#">&#62;</a>
+		</div>
+
+		<p class="info-popup">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-		 </p>
-	 </div>
+		</p>
+
+		<div class="social">
+			<a href="#">
+				<i class="fa-brands fa-facebook-f"></i>
+			</a>
+			<a href="#">
+				<i class="fa-brands fa-twitter"></i>
+			</a>
+			<a href="#">
+				<i class="fa-brands fa-pinterest-p"></i>
+			</a>
+			<a href="#">
+				<i class="fa-brands fa-google-plus-g"></i>
+			</a>
+		</div>
+
+		<div class="bg-social">
+			<a href="#">
+				<i class="fa-brands fa-facebook-f"></i>
+			</a>
+			<a href="#">
+				<i class="fa-brands fa-twitter"></i>
+			</a>
+			<a href="#">
+				<i class="fa-brands fa-pinterest-p"></i>
+			</a>
+			<a href="#">
+				<i class="fa-brands fa-google-plus-g"></i>
+			</a>
+		</div>
+
 
 
 	<!-- scripts -->
+	<script src="js/script.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
