--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
 			<button>+</button>
 		 </div>
 		 <select class="form-select" aria-label="Default select example">
-			<option selected>Open this select menu</option>
-			<option value="1">One</option>
-			<option value="2">Two</option>
-			<option value="3">Three</option>
+			<option selected>Placeholder text</option>
+			<option>Here's an option</option>
+			<option value="1">Another option1</option>
+			<option value="2">Another option2</option>
+			<option value="3">Another option3</option>
+			<option value="3">Another option4</option>
 		 </select>
 		 <input disabled placeholder="Success" class="success" type="text">
 		 <input disabled placeholder="An error has ocured" class="no-success" type="text"> 
@@ -148,6 +150,14 @@
 			<a href="#">8</a>
 			<a href="#">9</a>
 			<a href="#">&#62;</a>
+		</div>
+		<div class="dots">
+			<span class="active"></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
 		</div>
 
 		<p class="info-popup">
